# game-of-life

./: game-of-life.cabal  gosper-glider-gun.txt  license  pom.xml  pulsar.txt  readme.md  run.sh
app/: Main.hs
seeds/: gosper-glider-gun.txt  pulsar.txt
src/: Game.hs  Lib.hs
src/Game/: Core.hs  IO.hs  Read.hs  Render.hs
src/main/java/io/tw/: App.java  Cells.java  Environment.java  Position.java
src/main/java/io/tw/util/: IO.java  RandomUtils.java
src/test/java/io/tw/: AppTest.java  CellsTest.java  EnvironmentTest.java  PositionTest.java
src/test/java/io/tw/util/: IOTest.java
test/: Spec.hs  Test.hs
test/Game/: CoreSpec.hs  CoreTest.hs  ReadSpec.hs  ReadTest.hs
