name:                 game-of-life
version:              0.0.1
synopsis:             Conway's Game of Life
homepage:             https://github.com/airt/game-of-life
license:              MIT
license-file:         license
author:               airt
maintainer:           airtial@gmail.com
build-type:           Simple
extra-source-files:   readme.md
cabal-version:        >= 1.10

library
  hs-source-dirs:     src
  exposed-modules:    Game.Core, Game.Read, Game.Render
  build-depends:      base == 4.*, containers, text
  default-language:   Haskell2010

executable game-of-life-exe
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base, game-of-life, optparse-applicative
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

test-suite game-of-life-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:      Game.CoreSpec, Game.ReadSpec
  build-depends:      base, game-of-life, QuickCheck
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:               git
  location:           https://github.com/airt/game-of-life
