name:                 game-of-life
version:              0.0.1
synopsis:             Conway's Game of Life
homepage:             https://github.com/airt/game-of-life
license:              MIT
license-file:         license
author:               airt
maintainer:           airtial@gmail.com
build-type:           Simple
extra-source-files:   readme.md
cabal-version:        >= 1.10

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:      base, containers, text
  exposed-modules:    Game, Game.Core, Game.IO, Game.Read, Game.Render

executable game-of-life-exe
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  main-is:            Main.hs
  build-depends:      base, game-of-life, optparse-applicative

test-suite game-of-life-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  main-is:            Test.hs
  build-depends:      base, game-of-life, tasty, tasty-hunit, tasty-quickcheck
  other-modules:      Game.CoreTest, Game.ReadTest

source-repository head
  type:               git
  location:           https://github.com/airt/game-of-life
